--- a/VREditor20160702.md
+++ b/VREditor20160702.md
@@ -89,6 +89,8 @@ VREditorに強くなるにはVRで完結させよ！
 
 ここらでカノちゃんでもインポートするか…
 
+<img src=".\image\kano.png" height=512px>
+
 
 ![](.\image\vreditor4.PNG "")
 
@@ -280,6 +282,67 @@ VREditorモードはescキーでも終了できる
 https://youtu.be/Jh7DFYTPsjY
 
 
+## なかなかの理不尽っぷり
+
+
+## これ　確実に死にます
+
+
+## アセットとかのお話
+
+
+今回　某Craftテイストなバリスタは
+
+MayaLTでさくっと作りました
+
+
+## カノちゃんのポーズ
+
+あの特徴的なポーズは現在作成中の
+
+VR内でポーズが作れるPosingEditorで作成しました
+
+<img src=".\image\vreditor24.PNG" height=380px>
+
+
+## せっかくなので
+
+https://youtu.be/tRqPfIdIhFM
+
+
+## Poseの流用手順
+PosingEditorでセーブ
+
+↓
+
+PosingEditor\Saved\SaveGames以下にmain.savとして出力
+
+↓
+
+これを使いたいProjectにコピー
+
+↓
+
+使いたいProject側で作成元と同じAnimBPを設定し、
+
+main.savをロード
+
+
+## PosingEditorの進捗
+足のIKはいい感じになりました
+
+<img src=".\image\PosingEditor2.PNG" height=380px>
+
+
+一応実行ファイルも公開してます
+
+https://www.dropbox.com/s/sc9lcpcfwpjl2ne/PosingEditor.zip?dl=0
+
+感想とかいただけると嬉しいです
+
+最終的にアニメーションまで組めればいいなと思ってます
+
+
 
 ## もうちょっと使ってみた
 
@@ -386,7 +449,7 @@ Particleも同様ギズモが出ない
 
 
 できること
-- 簡単なレベルデザイン
+- 簡単なVR向けのレベルデザイン
 - パラメータの調整
 
 
