--- a/VREditor20160702.md
+++ b/VREditor20160702.md
@@ -331,7 +331,7 @@ main.savをロード
 ## PosingEditorの進捗
 足のIKはいい感じになりました
 
-<img src=".\image\PosingEditor2.PNG" height=380px>
+<img src=".\image\posingEditor2.PNG" height=380px>
 
 
 一応実行ファイルも公開してます
