add some PosingEditor

--- a/VREditor20160702.md
+++ b/VREditor20160702.md
@@ -329,9 +329,9 @@ main.savをロード
 
 
 ## PosingEditorの進捗
-足のIKはいい感じになりました
+GrayManに変更して、LeapMotionに対応しました
 
-<img src=".\image\posingEditor2.PNG" height=380px>
+![](.\image\posingEditor4.PNG "")
 
 
 一応実行ファイルも公開してます
@@ -404,9 +404,29 @@ alweiさんのトゥーンシェーディング用の
 よ、読めない…
 
 
-ウインドウにCustomDepthを仕込んだり出来なさそうなので、
+ひょっとして、トゥーン用だからかな？と思って、
 
-VR内でポストプロセスの調整は場合によっては厳しいかも
+UE4Documentにあった
+
+PostProcessMaterialも適用してみました
+
+<img src=".\image\vreditor29.PNG" height=400px>
+
+
+やっぱりポストプロセスがかかってしまうみたいです
+
+<img src=".\image\vreditor27.PNG" height=500px align=left>
+
+<img src=".\image\vreditor28.PNG" height=500px align=right>
+
+
+一応ベースとなるVREditorUserBaseWidget(C++)とかは
+
+EngineContent\VREditorで発見したんですが、
+
+これに手を加えるのは大変そうなので今回はやめました
+
+![](.\image\vreditor26.PNG)
 
 
 ## ライティング(Lighting)
